Isolation forest, One-class SVM

--- a/Outlier Removal using LOF-Isolation forest-One class SVM.ipynb
+++ b/Outlier Removal using LOF-Isolation forest-One class SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "b9644151",
    "metadata": {},
    "outputs": [],
@@ -262,12 +262,12 @@
    "id": "e6ccc55e",
    "metadata": {},
    "source": [
-    "# After LOF"
+    "# After LOF "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "680fdaf0",
    "metadata": {},
    "outputs": [
@@ -308,6 +308,106 @@
     "### In LocalOutlierFactor() should I pass the scaled X_train or the original X_train?\n",
     "In most cases, it is recommended to pass the scaled X_train to the LocalOutlierFactor algorithm instead of the original X_train. The reason for this is that the LOF algorithm is based on distance measures, and the scale of the features can have a significant impact on the algorithm's performance."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feeef8dc",
+   "metadata": {},
+   "source": [
+    "# After Isolation Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d6202dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(339, 13) (339,)\n",
+      "(305, 13) (305,)\n",
+      "MAE: 3.271\n",
+      "R2 Score: 0.777\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import IsolationForest\n",
+    "contamination = 0.1\n",
+    "isof = IsolationForest(contamination=contamination)\n",
+    "outlier_labels = isof.fit_predict(X_train_scaled)\n",
+    "mask = (outlier_labels != -1)\n",
+    "print(X_train.shape, y_train.shape)\n",
+    "X_train_reduced, y_train_redcued = X_train_scaled[mask, :], y_train[mask]\n",
+    "print(X_train_reduced.shape, y_train_redcued.shape)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train_reduced, y_train_redcued)\n",
+    "\n",
+    "yhat = model.predict(X_test_scaled)\n",
+    "mae = mean_absolute_error(y_test, yhat)\n",
+    "print('MAE: %.3f' % mae)\n",
+    "r2 = r2_score(y_test, yhat)\n",
+    "print('R2 Score: %.3f' % r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "290e7710",
+   "metadata": {},
+   "source": [
+    "# After one class SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0219f2f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(339, 13) (339,)\n",
+      "(315, 13) (315,)\n",
+      "MAE: 3.291\n",
+      "R2 Score: 0.774\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import OneClassSVM\n",
+    "\n",
+    "nu = 0.05\n",
+    "clf = OneClassSVM(nu=nu)\n",
+    "\n",
+    "outlier_labels = clf.fit_predict(X_train_scaled)\n",
+    "mask = (outlier_labels != -1)\n",
+    "print(X_train.shape, y_train.shape)\n",
+    "X_train_reduced, y_train_redcued = X_train_scaled[mask, :], y_train[mask]\n",
+    "print(X_train_reduced.shape, y_train_redcued.shape)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train_reduced, y_train_redcued)\n",
+    "\n",
+    "yhat = model.predict(X_test_scaled)\n",
+    "mae = mean_absolute_error(y_test, yhat)\n",
+    "print('MAE: %.3f' % mae)\n",
+    "r2 = r2_score(y_test, yhat)\n",
+    "print('R2 Score: %.3f' % r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6004eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
